# RobotiC

./: .gitignore  CMakeLists.txt  RobotiCConfig.h.in  kinematics.cpp  kinematics.h  kinematics_unittests.cpp  main.cpp  plane.cpp  plane.h  robotic_utils.cpp  robotic_utils.h  se3viz.cpp  se3viz.h  serialarmviz.cpp  serialarmviz.h  sliderbar.cpp  sliderbar.h  toolsforunittests.cpp  trackballcameracontroller.cpp  trackballcameracontroller.h  transforms.cpp  transforms.h  transforms_unittests.cpp  utils_unittests.cpp  vizscene.cpp  vizscene.h
